# skpmlzoomcamp_finalproject_2025

./: .gitignore  README.md  Readme1.MD  __Datasets.docx  __Regression.xlsx  pyproject.toml  requirements.txt  requirements_v1.txt
Analysis/: Analysis.docx  ~$alysis.docx
Docker/: AirbnbProperty.py  AirbnbSuperhost.py  api_client.py  api_model_server.py  dockerfile  requirements.txt
Kubernetes/: README.md  deployment.yaml  service.yaml
Notebook/: airbnb_classification.ipynb  airbnb_cnn_Old.ipynb  airbnb_cnn_premium_non_premium.ipynb  airbnb_cnn_roomtype_classification.ipynb  airbnb_dl_room_classification.ipynb  airbnb_regression.ipynb  airbnb_regression_v1.ipynb  airbnb_regression_v2.ipynb  airbnb_regression_v3.ipynb  airbnb_regression_v4.ipynb  airbnb_visualization.ipynb  test_models.ipynb
_models/: regression_model.json
scripts/: airbnb_classification.py  airbnb_cnn_premium_non_premium.py  airbnb_cnn_roomtype_classification-Copy1.py  airbnb_cnn_roomtype_classification.py  airbnb_regression.py  airbnb_visualization.py  download_dataset.py
