[project]
name = "skpmlzoomcamp-finalproject-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "jupytext>=1.18.1",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "threadpoolctl>=3.6.0",
    "tqdm>=4.67.1",
    "uv>=0.9.18",
    "uvicorn>=0.40.0",
    "xgboost>=3.1.2",
]
